fix verification message order
